--- a/index.html
+++ b/index.html
@@ -32,28 +32,35 @@
             text-decoration: none;
             color: blue;
         }
+        .box {
+            background-color: lightgray;
+            padding: 20px;
+            border-radius: 4px;
+        }
     </style>
 </head>
 
 <body>
-    <select>
-        <option value="">--Please choose an option--</option>
-        <option value="option1">Option 1</option>
-        <option value="option2">Option 2</option>
-        <option value="option3">Option 3</option>
-        <option value="option4">Option 4</option>
-    </select>
-    <hr>
-    <!-- 3 Radio buttons -->
-    <input type="radio" id="option1" name="option" value="option1" />
-    <label for="option1">Option 1</label>
-    <input type="radio" id="option2" name="option" value="option2" />
-    <label for="option2">Option 2</label>
-    <input type="radio" id="option3" name="option" value="option3" />
-    <label for="option3">Option 3</label>
-    <!-- Anchor tag -->
-    <hr>
-    <a href="https://www.google.com" target="_blank">Google</a>
+    <div class="box">
+        <select>
+            <option value="">--Please choose an option--</option>
+            <option value="option1">Option 1</option>
+            <option value="option2">Option 2</option>
+            <option value="option3">Option 3</option>
+            <option value="option4">Option 4</option>
+        </select>
+        <hr>
+        <!-- 3 Radio buttons -->
+        <input type="radio" id="option1" name="option" value="option1" />
+        <label for="option1">Option 1</label>
+        <input type="radio" id="option2" name="option" value="option2" />
+        <label for="option2">Option 2</label>
+        <input type="radio" id="option3" name="option" value="option3" />
+        <label for="option3">Option 3</label>
+        <!-- Anchor tag -->
+        <hr>
+        <a href="https://www.google.com" target="_blank">Google</a>
+    </div>
 
 </body>
 
